# tp-lib

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  DEBUG.md  Dockerfile  Dockerfile.test  GOVERNANCE.md  MAINTAINERS.md  MIGRATION_TO_PROJ4RS.md  README.md  SECURITY.md  deny.toml  docker-compose.yml  publiccode.yml  tp-lib.sln
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml  coverage.yml  docs.yml  publish-crates.yml  publish-nuget.yml  publish-pypi.yml  sbom.yml
.specify/memory/: constitution.md
docs/: OpenRail-onboarding.md  WORKFLOWS.md  WORKFLOWS_README.md  WORKFLOWS_SETUP.md
specs/001-gnss-projection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-train-path-calculation/: algorithm.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-path-review-webapp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-train-detections/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-dotnet-bindings/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-download-rinf-topology/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
test-data/: README.md  log_28876_L36-B-simple-projection.geojson  log_29083_L36-A-simple-projection.geojson  network_airport.geojson  rinf_smoke_gnss.geojson  rinf_uncovered_gnss.geojson  run_calculations.ps1  sample_detections_linear.geojson  sample_detections_punctual.csv  sample_detections_punctual_coord.geojson  sample_gnss.geojson  sample_network.geojson
test-data/log_28554/: log_28554_L36-A_to_L36C-A-path-calculation.geojson  log_28554_L36-A_to_L36C-A-path-projection.geojson  log_28554_L36-A_to_L36C-A-simple-projection.geojson  log_28554_L36-A_to_L36C-A.csv
test-data/log_28573/: log_28573_L36-A_to_L36C-A_to_L25N-B-path-calculation.geojson  log_28573_L36-A_to_L36C-A_to_L25N-B-path-projection.geojson  log_28573_L36-A_to_L36C-A_to_L25N-B-simple-projection.geojson  log_28573_L36-A_to_L36C-A_to_L25N-B.csv
test-data/log_28573-detections/: log_28573_L36-A_to_L36C-A_to_L25N-B-path-calculation-with-detection.geojson  sample-detections.csv
test-data/log_28573-path-review/: log_28573_L36-A_to_L36C-A_to_L25N-B-reviewed-path.geojson  log_28573_L36-A_to_L36C-A_to_L25N-B-reviewed.geojson
test-data/log_28586/: log_28586_L36-A_to_L36C-A_to_L25N-B-very-bad-path-calculation.geojson  log_28586_L36-A_to_L36C-A_to_L25N-B-very-bad-path-projection.geojson  log_28586_L36-A_to_L36C-A_to_L25N-B-very-bad-simple-projection.geojson  log_28586_L36-A_to_L36C-A_to_L25N-B-very-bad.csv
test-data/log_28876/: log_28876_L36-B-path-calculation.geojson  log_28876_L36-B-path-projection.geojson  log_28876_L36-B-simple-projection.geojson  log_28876_L36-B.csv
test-data/log_29083/: log_29083_L36-A-path-calculation.geojson  log_29083_L36-A-path-projection.geojson  log_29083_L36-A-simple-projection.geojson  log_29083_L36-A.csv
test-data/log_29224/: log_29224_L36N-A-path-calculation.geojson  log_29224_L36N-A-path-projection.geojson  log_29224_L36N-A-simple-projection.geojson  log_29224_L36N-A.csv
tp-cli/: Cargo.toml  README.md
tp-cli/src/: main.rs
tp-cli/tests/: cli_detections.rs  cli_integration_test.rs
tp-core/: Cargo.toml
tp-core/benches/: detections_overhead.rs  naive_baseline_bench.rs  path_calculation_bench.rs  projection_bench.rs
tp-core/src/: crs.rs  detections.rs  errors.rs  io.rs  lib.rs  models.rs  path.rs  projection.rs  temporal.rs  tests.rs  workflow.rs
tp-core/src/crs/: tests.rs  transform.rs
tp-core/src/detections/: anchor.rs  error.rs  filter.rs  load.rs  resolve.rs  validate.rs
tp-core/src/io/: arrow.rs  csv.rs  geojson.rs  mod.rs  rinf.rs
tp-core/src/io/csv/: detections.rs  tests.rs
tp-core/src/io/geojson/: detections.rs  tests.rs
tp-core/src/models/: associated_net_element.rs  detection.rs  detection_record.rs  gnss.rs  gnss_net_element_link.rs  netelement.rs  netrelation.rs  path_metadata.rs  path_origin.rs  projected_position.rs  result.rs  retrieval.rs  train_path.rs
tp-core/src/models/path_metadata/: tests.rs
tp-core/src/path/: candidate.rs  construction.rs  debug.rs  graph.rs  probability.rs  selection.rs  spacing.rs  tests.rs  viterbi.rs
tp-core/src/projection/: geom.rs  spatial.rs
tp-core/src/temporal/: mod.rs  tests.rs
tp-core/tests/: contract.rs  detections_anchor.rs  detections_coverage.rs  detections_filter.rs  detections_load.rs  detections_provenance.rs  detections_resolve.rs  rinf_topology.rs  tests.rs  unit.rs
tp-core/tests/contract/: lib_api_stability_test.rs  path_api_contract.rs  rinf_query_shape_test.rs
tp-core/tests/fixtures/: rinf_smoke_netelements.json  rinf_smoke_netrelations.json  test_gnss.csv  test_network.geojson
tp-core/tests/integration/: mod.rs  path_calculation.rs  path_calculation_fixture_test.rs  path_calculation_test.rs  pipeline_test.rs  simple_projection_fixture_test.rs
tp-core/tests/unit/: crs_transform_test.rs  gnss_model_test.rs  mod.rs  path_candidate_test.rs  path_construction_test.rs  path_probability_test.rs  projection_basic_test.rs
tp-net/: Cargo.toml  README.md  build.rs
tp-net/csharp/: Enums.cs  Exceptions.cs  Models.cs  NativeMethods.g.cs  TpLib.cs  TpLib.csproj  TpLib.targets  TpLibNative.cs
tp-net/csharp/Tests/: DetectionPreparationTests.cs  InMemoryInputTests.cs  PathCalculationTests.cs  ProjectionTests.cs  SerializationTests.cs  TestData.cs  TpLib.Tests.csproj
tp-net/src/: ffi.rs  lib.rs  marshal.rs
tp-py/: Cargo.toml  README.md  pyproject.toml
tp-py/python/tests/: test_path_calculation.py  test_projection.py
tp-py/python/tp_lib/: __init__.py
tp-py/src/: lib.rs
tp-webapp/: Cargo.toml
tp-webapp/src/: edit.rs  embed.rs  lib.rs  server.rs
tp-webapp/src/server/: detections.rs  routes.rs  state.rs
tp-webapp/static/: app.js  detections.js  index.html  style.css
tp-webapp/tests/: api_detections.rs  integration.rs  unit.rs
tp-webapp/tests/integration/: webapp_integration_test.rs
tp-webapp/tests/unit/: routes_test.rs
(+105 files in other folders)
