[workspace]
members = [
    "tp-core",
    "tp-cli",
    "tp-py",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TP-Lib Contributors"]
license = "Apache-2.0"
repository = "https://github.com/infrabel/tp-lib"

[workspace.dependencies]
# Geospatial
geo = "0.28"
proj4rs = "0.1.9"
crs-definitions = "0.3.1"
rstar = "0.12"
geojson = "0.24"

# Data processing
arrow = "53.0"
polars = "0.44"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Temporal
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Python bindings
pyo3 = { version = "0.21", features = ["extension-module"] }

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
quickcheck = "1.0"
