[package]
name = "tp-lib-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for GNSS track axis projection with spatial indexing"
documentation = "https://docs.rs/tp-lib-core"
readme = "../README.md"
keywords = ["gnss", "gps", "railway", "geospatial", "projection"]
categories = ["science::geo", "algorithms"]

[dependencies]
geo.workspace = true
proj4rs.workspace = true
crs-definitions.workspace = true
rstar.workspace = true
geojson.workspace = true
petgraph.workspace = true
arrow.workspace = true
polars.workspace = true
csv.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true

[features]
default = []

[dev-dependencies]
criterion.workspace = true
quickcheck.workspace = true
tempfile = "3.24.0"

[[bench]]
name = "projection_bench"
harness = false

[[bench]]
name = "naive_baseline_bench"
harness = false

[[bench]]
name = "path_calculation_bench"
harness = false
