[package]
name = "tp-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for tp-core GNSS projection library"
readme = "../README.md"
keywords = ["gnss", "gps", "railway", "python", "pyo3"]
categories = ["api-bindings"]

[lib]
name = "tp_lib"
crate-type = ["cdylib"]

[dependencies]
tp-core = { version = "0.0.1", path = "../tp-core" }
pyo3.workspace = true
