[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tp-lib"
version = "0.1.0"
description = "Train Positioning Library - GNSS track axis projection"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "TP-Lib Contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.urls]
Repository = "https://github.com/infrabel/tp-lib"

[tool.maturin]
python-source = "python"
module-name = "tp_lib"
